# Ledger-Language-Model

./: .gitignore  Dockerfile  README.md  pyproject.toml
data/: Chart_of_Accounts(COA).txt
src/: constants.py  drive_access.py  evaluation.py  main.py  utils.py
test/: test_agent.py  test_integration.py  test_main.py
